<resources>
    <string name="app_name">Mifos Android Client</string>
    <string name="server_name_template">https://demo.mifcloud.com</string>
    <string name="not_implemented_yet_message">To be implemented soon!</string>
    <string name="not_available">N/A</string>
    <string name="type_to_filter">Type to filter the list</string>
    <string name="feeId">Fee ID:&#160;</string>
    <string name="amount">Amount:&#160;</string>
    <string name="cause">Error cause:&#160;</string>
    <string name="exception.accounts.ApplicationException.CannotAdjust">The amount cannot be adjusted either because the status is not yet active or because a payment was received at the time of disbursement.</string>
    <string name="error.activity.not.allowed">Activity not allowed.</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_server_address">Please provide a Mifos server address:</string>
    <string name="dialog_login_title">Logging in</string>
    <string name="dialog_loading_message">Please wait...</string>
    <string name="dialog_checking_session">Checking user session</string>
    <string name="dialog_getting_customer_data">Getting customer data</string>
    <string name="dialog_getting_account_data">Getting account data</string>
    <string name="dialog_getting_transaction_history">Getting transaction history</string>
    <string name="dialog_getting_installment_details">Getting installment details</string>
    <string name="dialog_getting_customer_charges">Getting customer charges</string>
    <string name="dialog_getting_deposit_due_details">Getting deposit due details</string>
    <string name="dialog_getting_repayment_schedule">Getting repayment schedule</string>
    <string name="dialog_getting_guarantors">Getting guarantors</string>
    <string name="dialog_submitting_data">Submitting</string>
    <string name="toast_first_address_set">The Mifos server address has been set. You can change it later in the options menu.</string>
    <string name="toast_address_set">The Mifos server address has been changed.</string>
    <string name="toast_first_address_canceled">The Mifos server address has not been set. Please set it using the options menu.</string>
    <string name="toast_connection_error">
        There appears to be a network connection problem. Please make sure You are connected
        to the internet and the Mifos server address is correct.
    </string>
    <string name="toast_address_invalid">
        The server address You provided appears to be invalid. Please make sure it is correct and
        retry.
    </string>
    <string name="toast_customer_id_not_available">
        The customer identifier is not available, cannot download customer data.
    </string>
    <string name="toast_account_id_not_available">
        The account number is not available, cannot download account data.
    </string>
    <string name="menu_change_address">Change server address</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="client_main_button_client_list">Browse customers</string>
    <string name="client_main_button_meetings_list">Upcoming meetings</string>
    <string name="client_main_button_collectionSheet">Enter collection sheet data</string>
    <string name="client_main_button_overdueBorrowers">Overdue borrowers</string>
    <string name="client_main_button_lastRepaymentReport">Last Repayment Report</string>
    <string name="client_main_label">Welcome to Mifos\nAndroid client!</string>
    <string name="login_login_label">Username:</string>
    <string name="login_password_label">Password:</string>
    <string name="login_button">Log in</string>
    <string name="login_errors">The login or password You provided was incorrect. Please correct the values and retry.</string>
    <string name="login_header">Please log in:</string>
    <string name="centerslist_label">Choose a center:</string>
    <string name="centerslist_no_center">Customers assigned to the branch</string>
    <string name="centersList_clientsAssignedToBranch">Clients assigned to the branch</string>
    <string name="centersList_hint">Click on a center to go to its groups. Do a long click on a center to view its details.</string>
    <string name="centersList_no_centers_available">You are logged in as \'%s\', but it appears You have no customers assigned. </string>
    <string name="centersList_listItemLabel_withChildren"><b>+</b> %1$s (%2$d)</string>
    <string name="overdueBorrowersList_label">Overdue borrowers</string>
    <string name="overdueBorrowersList_no_overdue_customers">You are logged in as \'%s\', but it appears You have no overdue borrowers.</string>
    <string name="overdueBorrowersList_hint">Click on a client to view his/her overdue loans. Do a long click to view customer details.</string>
    <string name="overdueBorrowersListItem_name_label">Client:</string>
    <string name="overdueBorrowersListItem_groupName_label">Group:</string>
    <string name="overdueBorrowersListItem_phone_label">Phone:</string>
    <string name="overdueBorrowersListItem_address_label">Address:</string>
    <string name="overdueBorrowersListItem_total_capital_label">Total capital exposure:</string>
    <string name="lastRepayment_label">Last Repayment Report</string>
    <string name="lastRepayment_hint">Click on a client to view his/her last loan. Do a long click to view customer details.</string>
    <string name="lastRepayment_no_customers">You are logged in as \'%s\', but it appears You have no customers assigned.</string>
    <string name="lastRepaymentClient_label">Client:</string>
    <string name="lastRepaymentGroup_label">Group:</string>
    <string name="lastRepaymentClient_lastLoanDate_label">Last repayment:</string>
	<string name="lastRepaymentClient_showLastLoan_hint">Tap to show client\'s last loan</string>
    <string name="clientslist_label">Select a customer to view his details:</string>
    <string name="clientsList_hint">Click on a group to view its clients (if any). Do a long click on a group to view its details.</string>
    <string name="clientsList_no_customers_available">You are logged in as \'%s\', but it appears that You have no groups or clients assigned.</string>
    <string name="clientsList_listGroupLabel_withChildren">+ %1$s (%2$d)</string>
    <string name="customerDetails_tab_overview">Overview</string>
    <string name="customerDetails_tab_accounts">Accounts &#38; Charges</string>
    <string name="customerDetails_tab_additional">Additional Info</string>
    <string name="customerOverview_status_label">Status:&#160;</string>
    <string name="customerOverview_systemId_label">System ID:&#160;</string>
    <string name="customerOverview_phoneNumber_label">Phone number:&#160;</string>
    <string name="customerOverview_phoneNumber_empty">No phone number</string>
    <string name="customerOverview_performance_history_label">Performance History:</string>
    <string name="customerOverview_loanCycleNo_label">Loan Cycle #:&#160;</string>
    <string name="customerOverview_amountOfLastLoan_label">Amount of last Loan:&#160;</string>
    <string name="customerOverview_noOfActiveLoans_label"># of active Loans:&#160;</string>
    <string name="customerOverview_delinquentPortfolio_label">Delinquent Portfolio:&#160;</string>
    <string name="customerOverview_totalSavings_label">Total Savings:&#160;</string>
    <string name="customerOverview_meetingsAttended_label">Meetings Attended:&#160;</string>
    <string name="customerOverview_meetingsMissed_label">Meetings Missed:&#160;</string>
    <string name="customerOverview_loanCyclePerProduct_label">Loan Cycle per Product:&#160;</string>
    <string name="customerOverview_name_label">Client name:&#160;</string>
    <string name="accountDetails_chargesDetailsButton_label">Charges Details</string>
    <string name="accountDetails_applyChargeButton_label">Apply Charge</string>
    <string name="savingsAccountListItem_balance_label">Balance:&#160;</string>
    <string name="savingsAccountListItem_status_label">Status:&#160;</string>
    <string name="loanAccountListItem_status_label">Status:&#160;</string>
    <string name="loanAccountListItem_outstandingBalance_label">Outstanding balance:&#160;</string>
    <string name="loanAccountListItem_amountDue_label">Amount due:&#160;</string>
    <string name="loanAccountListItem_amountInArrears_label">Total amount in arrears:&#160;</string>
    <string name="loanAccountListItem_capitalExposure_label">Capital exposure:&#160;</string>
    <string name="loan_label">Loan Accounts</string>
    <string name="savings_label">Savings Accounts</string>
    <string name="charges_label">Client Charges:</string>
    <string name="closedSavingsLabel">Closed Savings Accounts</string>
    <string name="closedLoanLabel">Closed Loan Accounts</string>
	<string name="guaranted_loans_label">Guaranted Loan Accounts</string>
    <string name="loanAccounts_amountDue_label">Amount due:&#160;</string>
    <string name="groupOverview_name_label">Group name:</string>
    <string name="groupOverview_noOfActiveClients_label"># of active Clients:&#160;</string>
    <string name="groupOverview_amountOfLastGroupLoan_label">Amount of last Group Loan:&#160;</string>
    <string name="groupOverview_averageIndividualLoanSize_label">Avg individual Loan size:&#160;</string>
    <string name="groupOverview_totalLoanPortfolio_label">Total Loan portfolio:&#160;</string>
    <string name="groupCharges_label">Group charges:</string>
    <string name="accountDetailsLoan_interestRules_label">Interest rules</string>
    <string name="accountDetailsLoan_interestRateType_label">Interest Rate Type:&#160;</string>
    <string name="accountDetailsLoan_interestRate_label">Interest rate:&#160;</string>
    <string name="accountDetailsLoan_interestDeductedAtDisbursement_label">Interest deducted at disbursement:&#160;</string>
    <string name="accountDetailsLoan_repaymentRules_label">Repayment rules:&#160;</string>
    <string name="accountDetailsLoan_frequencyOfInstallments_label">Frequency of Installments:&#160;</string>
    <string name="accountDetailsLoan_PrincipalDueOnLastInstallment_label">Principal due on last installment:&#160;</string>
    <string name="accountDetailsLoan_GracePeriodType_label">Grace Period Type:&#160;</string>
    <string name="accountDetailsLoan_NoOfInstallments_label">No. of installments:&#160;</string>
    <string name="accountDetailsLoan_GracePeriodForRepayments_label">Grace period for repayments:&#160;</string>
    <string name="accountDetailsLoan_SourceOfFund_label">Source of fund:&#160;</string>
    <string name="accountDetailsLoan_CollateralDetails_label">Collateral details:&#160;</string>
    <string name="accountDetailsLoan_CollateralType_label">Collateral type:&#160;</string>
    <string name="accountDetailsLoan_CollateralNotes_label">Collateral Notes:&#160;</string>
    <string name="accountDetailsLoan_ExternalID_label">External ID:&#160;</string>
    <string name="accountDetailsLoan_RecurringAccountFees_label">Recurring account fees:&#160;</string>
    <string name="accountDetailsLoan_OneTimeAccountFees_label">One time account fees:&#160;</string>
    <string name="accountDetails_transactionsHistoryButton_label">View Transactions History</string>
    <string name="accountDetails_installmentDetailsButton_label">View Installment Details</string>
    <string name="accountDetails_repaymentScheduleButton_label">View Repayment Schedule</string>
    <string name="accountDetails_guarantorsButton_label">View Guarantors</string>
    <string name="accountTransaction_applySavingsAdjustment_label">Apply adjustment</string>
    <string name="accountTransaction_savingsTransaction_label">Make deposit/withdrawal</string>
    <string name="no_operation_available">There is no available operation</string>
</resources>