<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/main_background">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		        
		<TextView
		       style="@style/Header"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/client_main_label"
		       />
		
		   <Button
		       android:id="@+id/view_clients_button"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/client_main_button_client_list"
		       android:onClick="onClientListSelected"
		       />
		
		   <Button
		       android:id="@+id/view_clients_button"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/client_main_button_meetings_list"
		       android:onClick="onMeetingSelected"
		       />
		
		   <Button
		       android:id="@+id/view_collectionSheetCenters_button"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/client_main_button_collectionSheet"
		       android:onClick="onCollectionSheetsSelected"
		       />
		   
		   <Button
		       android:id="@+id/view_overdueBorrowers_button"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/client_main_button_overdueBorrowers"
		       android:onClick="onOverdueBorrowersClick"
		       />

			<Button
		       android:id="@+id/view_lastRepaymentReport_button"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/client_main_button_lastRepaymentReport"
		       android:onClick="onLastRepaymentReportClick"
		       />
		   
    </LinearLayout>
    
</ScrollView>
    
