<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent">

        <Button
            android:id="@+id/view_transactionsHistory_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountDetails_transactionsHistoryButton_label"
            android:onClick="onTransactionsHistorySelected"
            />

        <Button
            android:id="@+id/view_installmentDetails_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_transactionsHistory_button"
            android:text="@string/accountDetails_installmentDetailsButton_label"
            android:onClick="onInstallmentDetailsSelected"
            />

        <Button
            android:id="@+id/view_repaymentSchedule_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_installmentDetails_button"
            android:text="@string/accountDetails_repaymentScheduleButton_label"
            android:onClick="onRepaymentScheduleSelected"
            />
        
        <Button
            android:id="@+id/view_guarantors_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_repaymentSchedule_button"
            android:text="@string/accountDetails_guarantorsButton_label"
            android:onClick="onGuarantorsSelected"
            />

          <TextView
            style="@style/Label"
            android:id="@+id/accountDetailsLoan_interestRules_label"
            android:layout_below="@id/view_guarantors_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_interestRules_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestRateType_label"
            android:layout_below="@id/accountDetailsLoan_interestRules_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_interestRateType_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestRateType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountDetailsLoan_interestRules_label"
            android:layout_toRightOf="@id/accountDetailsLoan_interestRateType_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestRate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountDetailsLoan_interestRateType_label"
            android:text="@string/accountDetailsLoan_interestRate_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestRate"
            android:layout_below="@id/accountDetailsLoan_interestRateType_label"
            android:layout_toRightOf="@id/accountDetailsLoan_interestRate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestDeductedAtDisbursement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountDetailsLoan_interestRate_label"
            android:text="@string/accountDetailsLoan_interestDeductedAtDisbursement_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestDeductedAtDisbursement"
            android:layout_toRightOf="@id/accountDetailsLoan_interestDeductedAtDisbursement_label"
            android:layout_below="@id/accountDetailsLoan_interestRate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestDeductedAtDisbursement_label"
            android:layout_below="@id/accountDetailsLoan_interestRate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_interestDeductedAtDisbursement_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_interestDeductedAtDisbursement"
            android:layout_below="@id/accountDetailsLoan_interestRate_label"
            android:layout_toRightOf="@id/accountDetailsLoan_interestDeductedAtDisbursement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

          <TextView
            style="@style/Label"
            android:id="@+id/accountDetailsLoan_repaymentRules_label"
            android:layout_below="@id/accountDetailsLoan_interestDeductedAtDisbursement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_repaymentRules_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_repaymentRules"
            android:layout_below="@id/accountDetailsLoan_interestDeductedAtDisbursement_label"
            android:layout_toRightOf="@id/accountDetailsLoan_repaymentRules_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_frequencyOfInstallments_label"
            android:layout_below="@id/accountDetailsLoan_repaymentRules_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_frequencyOfInstallments_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_frequencyOfInstallments"
            android:layout_below="@id/accountDetailsLoan_repaymentRules_label"
            android:layout_toRightOf="@id/accountDetailsLoan_frequencyOfInstallments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <TextView
              style="@style/Shifted"
              android:id="@+id/accountDetailsLoan_PrincipalDueOnLastInstallment_label"
              android:layout_below="@id/accountDetailsLoan_frequencyOfInstallments_label"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/accountDetailsLoan_PrincipalDueOnLastInstallment_label"
              />
          <TextView
              style="@style/Shifted"
              android:id="@+id/accountDetailsLoan_PrincipalDueOnLastInstallment"
              android:layout_toRightOf="@id/accountDetailsLoan_PrincipalDueOnLastInstallment_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/accountDetailsLoan_frequencyOfInstallments_label"
              />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_GracePeriodType_label"
            android:layout_below="@id/accountDetailsLoan_PrincipalDueOnLastInstallment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_GracePeriodType_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_GracePeriodType"
            android:layout_below="@id/accountDetailsLoan_PrincipalDueOnLastInstallment_label"
            android:layout_toRightOf="@id/accountDetailsLoan_GracePeriodType_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_NoOfInstallments_label"
            android:layout_below="@id/accountDetailsLoan_GracePeriodType_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_NoOfInstallments_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_NoOfInstallments"
            android:layout_below="@id/accountDetailsLoan_GracePeriodType_label"
            android:layout_toRightOf="@id/accountDetailsLoan_NoOfInstallments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_GracePeriodForRepayments_label"
            android:layout_below="@id/accountDetailsLoan_NoOfInstallments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_GracePeriodForRepayments_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_GracePeriodForRepayments"
            android:layout_below="@id/accountDetailsLoan_NoOfInstallments_label"
            android:layout_toRightOf="@id/accountDetailsLoan_GracePeriodForRepayments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_SourceOfFund_label"
            android:layout_below="@id/accountDetailsLoan_GracePeriodForRepayments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_SourceOfFund_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_SourceOfFund"
            android:layout_below="@id/accountDetailsLoan_GracePeriodForRepayments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/accountDetailsLoan_SourceOfFund_label"
            />

          <TextView
            style="@style/Label"
            android:id="@+id/accountDetailsLoan_CollateralDetails_label"
            android:layout_below="@id/accountDetailsLoan_SourceOfFund_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_CollateralDetails_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_CollateralType_label"
            android:layout_below="@id/accountDetailsLoan_CollateralDetails_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_CollateralType_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_CollateralType"
            android:layout_below="@id/accountDetailsLoan_CollateralDetails_label"
            android:layout_toRightOf="@id/accountDetailsLoan_CollateralType_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_CollateralNotes_label"
            android:layout_below="@id/accountDetailsLoan_CollateralType_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_CollateralNotes_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_CollateralNotes"
            android:layout_below="@id/accountDetailsLoan_CollateralType_label"
            android:layout_toRightOf="@id/accountDetailsLoan_CollateralNotes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


          <TextView
            style="@style/Label"
            android:id="@+id/accountDetailsLoan_ExternalID_label"
            android:layout_below="@id/accountDetailsLoan_CollateralNotes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_ExternalID_label"
            />
          <TextView
            style="@style/Shifted"
            android:id="@+id/accountDetailsLoan_ExternalID"
            android:paddingTop="4dp"
            android:layout_below="@id/accountDetailsLoan_CollateralNotes_label"
            android:layout_toRightOf="@id/accountDetailsLoan_ExternalID_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

          <TextView
            style="@style/Label"
            android:id="@+id/accountDetailsLoan_RecurringAccountFees_label"
            android:layout_below="@id/accountDetailsLoan_ExternalID_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_RecurringAccountFees_label"
            android:visibility="invisible"
            />

          <LinearLayout
            android:id="@+id/accountDetailsLoan_RecurringAccountFees"
            android:orientation="vertical"
            android:layout_below="@id/accountDetailsLoan_RecurringAccountFees_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">
        </LinearLayout>

        <TextView
            style="@style/Label"
            android:id="@+id/accountDetailsLoan_OneTimeAccountFees_label"
            android:layout_below="@id/accountDetailsLoan_RecurringAccountFees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountDetailsLoan_OneTimeAccountFees_label"
            android:visibility="invisible"
            />

          <LinearLayout
            android:id="@+id/accountDetailsLoan_OneTimeAccountFees"
            android:orientation="vertical"
            android:layout_below="@id/accountDetailsLoan_OneTimeAccountFees_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">
        </LinearLayout>

    </RelativeLayout>
</ScrollView>