<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent">

        <Button
            android:id="@+id/accountSavings_applyAdjustment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountTransaction_applySavingsAdjustment_label"
            android:onClick="onApplySavingsAdjustmentSelected"
            />

        <Button
            android:id="@+id/accountSavings_savingsTransaction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountSavings_applyAdjustment"
            android:text="@string/accountTransaction_savingsTransaction_label"
            android:onClick="onSavingsTransactionSelected"
            />

        <TextView
            style="@style/InfoBig"
            android:gravity="center"
            android:id="@+id/no_savings_operation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_below="@id/accountSavings_savingsTransaction"
            android:text="@string/no_operation_available"
            />

        </RelativeLayout>
</ScrollView>